# advent-of-code

./: .gitignore  Makefile  aoc.py  cli.py  helpers.py  matrix.py  pyproject.toml  readme.md  tox.ini  values.py
.boilerplate/: part1.py  part2.py
year2015/day1/: part1.py  part2.py
year2016/day1/: part1.py  part2.py
year2017/day1/: part1.py  part2.py
year2019/: computer.py
year2019/day1/: part1.py  part2.py
year2019/day2/: part1.py  part2.py
year2019/day3/: part1.py  part2.py
year2019/day4/: part1.py  part2.py
year2019/day5/: part1.py  part2.py
year2020/day1/: part1.py  part2.py
year2020/day2/: part1.py  part2.py
year2020/day3/: part1.py  part2.py
year2020/day4/: part1.py  part2.py
year2020/day5/: part1.py  part2.py
year2020/day6/: part1.py  part2.py
year2020/day7/: part1.py  part2.py
year2021/day1/: part1.py  part2.py
year2021/day2/: part1.py  part2.py
year2022/: computer.py
year2022/day1/: part1.py  part2.py
year2022/day10/: part1.py  part2.py
year2022/day11/: part1.py  part2.py
year2022/day12/: part1.py  part2.py
year2022/day13/: cmp_readable.py  part1.py  part2.py
year2022/day14/: part1.py  part2.py
year2022/day15/: part1.py  part2.py
year2022/day2/: part1.py  part2.py
year2022/day3/: part1.py  part2.py
year2022/day4/: part1.py  part2.py
year2022/day5/: part1.py  part2.py
year2022/day6/: part1.py  part2.py
year2022/day7/: part1.py  part2.py
year2022/day8/: part1.py  part2.py
year2022/day9/: part1.py  part2.py
year2023/day1/: part1.py  part2.py
year2023/day10/: part1.py  part2.py
year2023/day11/: part1.py  part2.py
year2023/day12/: part1.py  part2.py
year2023/day13/: part1.py  part2.py
year2023/day14/: part1.py  part2.py
year2023/day15/: part1.py  part2.py
year2023/day16/: part1.py  part2.py
year2023/day17/: part1.py  part2.py
year2023/day18/: part1.py  part2.py
year2023/day19/: part1.py  part2.py
year2023/day2/: part1.py  part2.py
year2023/day20/: example3  example4  part1.py  part2.py
year2023/day21/: part1.py  part2.py
year2023/day22/: part1.py  part2.py
year2023/day23/: part1.py  part2.py  special
year2023/day24/: part1.py  part2.py
year2023/day25/: part1.py
year2023/day3/: part1.py  part2.py
year2023/day4/: part1.py  part2.py
year2023/day5/: part1.py  part2.py
year2023/day6/: part1.py  part2.py
year2023/day7/: part1.py  part2.py
year2023/day8/: part1.py  part2.py
year2023/day9/: part1.py  part2.py
year2024/day1/: part1.py  part2.py
year2024/day10/: part1.py  part2.py
year2024/day11/: part1.py  part2.py
year2024/day12/: part1.py  part2.py
year2024/day13/: part1.py  part2.py
year2024/day14/: part1.py  part2.py
year2024/day15/: part1.py  part2.py
year2024/day16/: part1.py  part2.py
year2024/day17/: part1.py  part2.py
year2024/day2/: part1.py  part2.py
year2024/day3/: input  part1.py  part2.py
year2024/day4/: part1.py  part2.py
(+10 files in other folders)
